fix display/opacity issue in mapmenu. invisible item should not be clickable.

--- a/less/mapmenu.less
+++ b/less/mapmenu.less
@@ -191,7 +191,7 @@
 
 			max-height: 0;
 
-			opacity: 0;
+			display: none;
 
 			pointer-events: none;
 
@@ -289,7 +289,7 @@
 
 				margin: 15px 0 5px 0;
 
-				opacity: 1;
+				display: block;
 
 				pointer-events: all;
 
